# trashctl

./: 404.html  CODE_OF_CONDUCT.md  Cargo.toml  README.md  chapter_1.html  index.html  print.html
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support.md
.github/workflows/: deploy.yml  grcov.yml  matrix.yml  rust-clippy.yml
book/: book.toml
src/: cli.rs  lib.rs  main.rs  trash.rs
src/cmd/: empty.rs  list.rs  mod.rs  put.rs  restore.rs  rm.rs
