[package]
name = "trashctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.6"
clap_complete = "3.2.2"
anyhow = "1.0"
dirs = "4.0.0"
chrono = "0.4.19"
fs_extra = "1.2.0"
clap-verbosity-flag = "1.0.1"
env_logger = "0.9.0"
log = "0.4.17"
configparser = "3.0.0"